# stfc-mod

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  example_community_patch_settings.toml  xmake.lua
.github/workflows/: ci.yaml  codeql.yaml  release.yaml
docs/: ATTACK_INCOMING_UI_DEBUG.md  AX_RUNTIME_REGRESSION_RECIPES.md  CONCEPT_RESTRUCTURE_PLAN.md  HOOKING_ENGINE_PLAN.md  MINHOOK_MIGRATION.md  NOTIFICATION_ARCHITECTURE.md  PLATFORM_BRIDGE.md  PRIME_WRAPPER_AUDIT.md  PROBE.md  TECH_DEBT_REPAYMENT_PLAN.md
macos-dylib/: xmake.lua
macos-dylib/src/: main.cc
macos-loader/: xmake.lua
macos-loader/src/: folder_manager.h  main.cc
mods/: xmake.lua
mods/src/: bounded_ttl_cache.h  config.cc  config.h  defaultconfig.h  errormsg.h  file.cc  file.h  folder_manager.h  platform_bridge.cc  platform_bridge.h  prime_types.h  str_utils.h  str_utils_pure.h  testable_functions.cc  testable_functions.h  titlelinux.h  titlewindows.h  version.h  windowtitle.h  wintoastlib.cc  wintoastlib.h
mods/src/hook/: detour.h  hook.h  pattern.h  signature.h
mods/src/il2cpp/: il2cpp-functions.cc  il2cpp-functions.h  il2cpp_helper.cc  il2cpp_helper.h
mods/src/patches/: async_work_queue.h  battle_log_decoder.cc  battle_log_decoder.h  battle_notify_parser.cc  battle_notify_parser.h  cargo_display.cc  cargo_display.h  fleet_actions.cc  fleet_actions.h  fleet_notifications.cc  fleet_notifications.h  frame_tick.cc  frame_tick.h  gamefunctions.h  hook_registry.cc  hook_registry.h  hotkey_dispatch.cc  hotkey_dispatch.h  hotkey_router.cc  hotkey_router.h  incoming_attack_notifications.cc  incoming_attack_notifications.h  key.cc  key.h  key_parse.cc  live_debug.h  live_debug_connector.h  live_debug_event_dispatcher.cc  (+60 more)
scripts/: validate-linux.sh
scripts/axf/: README.md  stfc-provider.mjs
tests/: xmake.lua
tests/src/: test_key_parse.cc  test_pure_logic.cc
tests/tools/: battle_log_decode_tool.cc
win-proxy-dll/: xmake.lua
win-proxy-dll/src/: main.cc  version.cc
(+73 files in other folders)
